--- a/package.json
+++ b/package.json
@@ -29,17 +29,17 @@
   "homepage": "https://github.com/wfortin/Marionette.TableView",
   "devDependencies": {
     "karma": "0.12.31",
-    "karma-chrome-launcher": "^0.1.8",
+    "karma-chrome-launcher": "0.1.8",
     "karma-jasmine": "0.3.5",
     "karma-junit-reporter": "0.2.2",
     "karma-mocha-reporter": "1.0.2",
-    "karma-phantomjs-launcher": "https://github.com/Coveo/karma-phantomjs-launcher/tarball/master",
+    "karma-phantomjs-launcher": "0.1.4",
     "typescript": "1.4.1"
   },
   "dependencies": {
     "backbone": "1.1.2",
     "backbone.marionette": "2.4.1",
-    "jquery": "2.1.3",
+    "jquery": "2.1.4",
     "underscore": "1.8.3",
     "underscore.string": "3.0.3"
   }
